--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "eslint": "^6.6.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-shopify": "^32.0.0"
   },
   "dependencies": {
