Update own eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "env": { "es6": true, "node": true },
+  "env": { "es6": true },
   "extends": ["plugin:shopify/esnext"],
   "parserOptions": { "sourceType": "module" },
   "rules": {
@@ -15,7 +15,14 @@
     "import/no-anonymous-default-export": "off",
     "line-comment-position": "off",
     "array-callback-return": "off",
-    "consistent-return": "off",
-    "no-console": "off"
+    "consistent-return": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"],
+        "moduleDirectory": ["node_modules", "src"]
+      }
+    }
   }
 }
